[gd_scene format=3 uid="uid://xgmyop7ncryh"]

[ext_resource type="Texture2D" uid="uid://cy4xfx762bxgb" path="res://assets/sprites/BG.png" id="1_5tue2"]
[ext_resource type="Script" uid="uid://csg2c22tuc1v4" path="res://scenes/arena/arena.gd" id="1_aj7ud"]
[ext_resource type="Texture2D" uid="uid://ov4fmsbglo55" path="res://assets/sprites/Map.png" id="2_aj7ud"]
[ext_resource type="Script" uid="uid://bnci2f36p6qu2" path="res://scenes/arena/camera_2d.gd" id="4_aj7ud"]
[ext_resource type="Script" uid="uid://drxvudobx5ppq" path="res://scenes/arena/spawner.gd" id="8_ii07k"]
[ext_resource type="Script" uid="uid://bl8didp2y4qrh" path="res://resources/wave/wave_data.gd" id="9_2ml6w"]
[ext_resource type="Resource" uid="uid://cxyd31rq6lfwu" path="res://resources/wave/data/wave_1_to_5.tres" id="10_xgbxb"]
[ext_resource type="Script" uid="uid://b5jwcrngd4625" path="res://resources/unit_stats.gd" id="12_tp84n"]
[ext_resource type="Resource" uid="uid://dhchq7b41ysc6" path="res://resources/units/enemy/stats_enemy_charger.tres" id="13_8kk48"]
[ext_resource type="Resource" uid="uid://cc0k3kq6chxx3" path="res://resources/units/enemy/stats_enemy_chaser_fast.tres" id="14_wqbss"]
[ext_resource type="Resource" uid="uid://c8771hxv5h0yq" path="res://resources/units/enemy/stats_enemy_chaser_mid.tres" id="15_fir7s"]
[ext_resource type="PackedScene" uid="uid://bawn7m1lgwf2b" path="res://scenes/ui/coins_bag/coins_bag.tscn" id="15_h4q77"]
[ext_resource type="PackedScene" uid="uid://bb3y5gnj3qu7s" path="res://scenes/ui/upgrades/upgrade_panel.tscn" id="15_w4nra"]
[ext_resource type="Resource" uid="uid://mqs4fiyvtkk0" path="res://resources/units/enemy/stats_enemy_chaser_slow.tres" id="16_gy0qm"]
[ext_resource type="Script" uid="uid://cr0po024cxfg5" path="res://resources/items/upgrades/item_upgrade.gd" id="16_v2rwt"]
[ext_resource type="Resource" uid="uid://chfx34trkjpk7" path="res://resources/items/upgrades/data/block/upgrade_block_1.tres" id="17_8rss1"]
[ext_resource type="Resource" uid="uid://q2j27ariocxi" path="res://resources/units/enemy/stats_enemy_shooter.tres" id="17_dh340"]
[ext_resource type="Resource" uid="uid://coth3bmqwlujl" path="res://resources/items/upgrades/data/block/upgrade_block_2.tres" id="18_h4q77"]
[ext_resource type="Resource" uid="uid://c6s1jtw3o7cpn" path="res://resources/items/upgrades/data/block/upgrade_block_4.tres" id="19_0b3j3"]
[ext_resource type="Resource" uid="uid://cam7axfg1flx2" path="res://resources/items/upgrades/data/block/upgrade_block_5.tres" id="20_ari34"]
[ext_resource type="Resource" uid="uid://c0ffpwokwyfe0" path="res://resources/items/upgrades/data/block/upgrade_block_6.tres" id="21_rvsgk"]
[ext_resource type="Resource" uid="uid://b3wxnn002th8a" path="res://resources/items/upgrades/data/block/upgrade_block_7.tres" id="22_dlje5"]
[ext_resource type="Resource" uid="uid://d02b0hc72ib3d" path="res://resources/items/upgrades/data/damage/upgrade_damage_1.tres" id="23_rdx1w"]
[ext_resource type="Resource" uid="uid://ctds6mnrkln36" path="res://resources/items/upgrades/data/damage/upgrade_damage_2.tres" id="24_rlwkl"]
[ext_resource type="Resource" uid="uid://c3gyuq6et5o0h" path="res://resources/items/upgrades/data/damage/upgrade_damage_3.tres" id="25_c233o"]
[ext_resource type="Resource" uid="uid://bclyrhd8b1iu3" path="res://resources/items/upgrades/data/damage/upgrade_damage_5.tres" id="26_8m5b6"]
[ext_resource type="Resource" uid="uid://cle58a5kshxry" path="res://resources/items/upgrades/data/damage/upgrade_damage_7.tres" id="27_uh2xj"]
[ext_resource type="Resource" uid="uid://trq5at3i8viv" path="res://resources/items/upgrades/data/damage/upgrade_damage_9.tres" id="28_a6q8v"]
[ext_resource type="Resource" uid="uid://hwbvogncyobw" path="res://resources/items/upgrades/data/harvesting/upgrade_harvesting_1.tres" id="29_3erww"]
[ext_resource type="Resource" uid="uid://t7ybf2omjw8o" path="res://resources/items/upgrades/data/harvesting/upgrade_harvesting_2.tres" id="30_raiaf"]
[ext_resource type="Resource" uid="uid://br8xsj4y3xwrp" path="res://resources/items/upgrades/data/harvesting/upgrade_harvesting_5.tres" id="31_i5wjf"]
[ext_resource type="Resource" uid="uid://c7ff2ncsv7u6p" path="res://resources/items/upgrades/data/harvesting/upgrade_harvesting_6.tres" id="32_suft4"]
[ext_resource type="Resource" uid="uid://bh5wgr8ldlreo" path="res://resources/items/upgrades/data/harvesting/upgrade_harvesting_8.tres" id="33_ypop5"]
[ext_resource type="Resource" uid="uid://uu8mc7mdu7es" path="res://resources/items/upgrades/data/harvesting/upgrade_harvesting_10.tres" id="34_bt16s"]
[ext_resource type="Resource" uid="uid://dnbxggdk5pj3q" path="res://resources/items/upgrades/data/health/upgrade_health_1.tres" id="35_qdbrs"]
[ext_resource type="Resource" uid="uid://b57xwdjf6cwst" path="res://resources/items/upgrades/data/health/upgrade_health_2.tres" id="36_uwy3e"]
[ext_resource type="Resource" uid="uid://dpneo2d5wxyq1" path="res://resources/items/upgrades/data/health/upgrade_health_4.tres" id="37_n2cp3"]
[ext_resource type="Resource" uid="uid://cgdy8lml60gos" path="res://resources/items/upgrades/data/health/upgrade_health_5.tres" id="38_6tjis"]
[ext_resource type="Resource" uid="uid://d2r78osqk8j7x" path="res://resources/items/upgrades/data/health/upgrade_health_8.tres" id="39_2v46x"]
[ext_resource type="Resource" uid="uid://dt4ycyd6r1f5u" path="res://resources/items/upgrades/data/health/upgrade_health_12.tres" id="40_4r0i2"]
[ext_resource type="Resource" uid="uid://bvdgnlwksckrv" path="res://resources/items/upgrades/data/hp_regen/upgrade_hp_regen_1.tres" id="41_6kcra"]
[ext_resource type="Resource" uid="uid://dele7bs3ar8sg" path="res://resources/items/upgrades/data/hp_regen/upgrade_hp_regen_2.tres" id="42_sr54x"]
[ext_resource type="Resource" uid="uid://v5hsfanrx4km" path="res://resources/items/upgrades/data/hp_regen/upgrade_hp_regen_3.tres" id="43_7mqte"]
[ext_resource type="Resource" uid="uid://ceh8gd7r5xvj0" path="res://resources/items/upgrades/data/hp_regen/upgrade_hp_regen_4.tres" id="44_qn0w1"]
[ext_resource type="Resource" uid="uid://cm0eva52r6ug5" path="res://resources/items/upgrades/data/life_steal/upgrade_life_steal_1.tres" id="45_3s26p"]
[ext_resource type="Resource" uid="uid://cp7unqvxysomg" path="res://resources/items/upgrades/data/life_steal/upgrade_life_steal_2.tres" id="46_hxwo4"]
[ext_resource type="Resource" uid="uid://bjvpyegmbohwl" path="res://resources/items/upgrades/data/life_steal/upgrade_life_steal_4.tres" id="47_doi8w"]
[ext_resource type="Resource" uid="uid://chdktcifr6rtw" path="res://resources/items/upgrades/data/life_steal/upgrade_life_steal_5.tres" id="48_r2piv"]
[ext_resource type="Resource" uid="uid://b5xreb2wu6cb2" path="res://resources/items/upgrades/data/life_steal/upgrade_life_steal_7.tres" id="49_cpv0d"]
[ext_resource type="Resource" uid="uid://bkuwunviax0v8" path="res://resources/items/upgrades/data/life_steal/upgrade_life_steal_9.tres" id="50_q8pmp"]
[ext_resource type="Resource" uid="uid://cp00158af8q3h" path="res://resources/items/upgrades/data/luck/upgrade_luck_1.tres" id="51_vt5tt"]
[ext_resource type="Resource" uid="uid://bfwdskcd5ler" path="res://resources/items/upgrades/data/luck/upgrade_luck_3.tres" id="52_nmd8y"]
[ext_resource type="Resource" uid="uid://d0yrdaxhouwgs" path="res://resources/items/upgrades/data/luck/upgrade_luck_5.tres" id="53_7r13w"]
[ext_resource type="Resource" uid="uid://bnqkkwnsqem62" path="res://resources/items/upgrades/data/luck/upgrade_luck_6.tres" id="54_n43t1"]
[ext_resource type="Resource" uid="uid://dchbjaf1xikfw" path="res://resources/items/upgrades/data/luck/upgrade_luck_9.tres" id="55_kos1b"]
[ext_resource type="Resource" uid="uid://yaw2jcncyes1" path="res://resources/items/upgrades/data/luck/upgrade_luck_12.tres" id="56_0537p"]
[ext_resource type="Resource" uid="uid://cmernbp3dlnvk" path="res://resources/items/upgrades/data/speed/upgrade_speed_5.tres" id="57_nw05c"]
[ext_resource type="Resource" uid="uid://dij17ywc2nism" path="res://resources/items/upgrades/data/speed/upgrade_speed_7.tres" id="58_c61ch"]
[ext_resource type="Resource" uid="uid://b4018o5qmopim" path="res://resources/items/upgrades/data/speed/upgrade_speed_10.tres" id="59_ru1bd"]
[ext_resource type="Resource" uid="uid://c1t0jhsjhjgio" path="res://resources/items/upgrades/data/speed/upgrade_speed_12.tres" id="60_5bpgu"]
[ext_resource type="Resource" uid="uid://bk16w8e7dx5um" path="res://resources/items/upgrades/data/speed/upgrade_speed_15.tres" id="61_mc4vh"]
[ext_resource type="Resource" uid="uid://6wjvxltxc0mh" path="res://resources/items/upgrades/data/speed/upgrade_speed_20.tres" id="62_enf7e"]
[ext_resource type="PackedScene" uid="uid://d1q8shcp8yajs" path="res://scenes/ui/shop/shop_panel.tscn" id="63_8rss1"]
[ext_resource type="PackedScene" uid="uid://c45khk1866enb" path="res://scenes/ui/selection_panel/selection_panel.tscn" id="64_h4q77"]
[ext_resource type="AudioStream" uid="uid://prc8bub0x4s1" path="res://assets/audio/Bg Music.mp3" id="65_0b3j3"]

[sub_resource type="LabelSettings" id="LabelSettings_fv88w"]
font_size = 64

[node name="Arena" type="Node2D" unique_id=1885043529 groups=["arena"]]
script = ExtResource("1_aj7ud")
normal_color = Color(1, 1, 1, 1)
blocked_color = Color(1, 0.290196, 0.454902, 1)
critical_color = Color(0.996078, 0.780392, 0.380392, 1)
hp_reg_color = Color(0, 0.627451, 0.482353, 1)

[node name="BlackBG" type="Sprite2D" parent="." unique_id=2062257682]
scale = Vector2(2, 2)
texture = ExtResource("1_5tue2")

[node name="GrassBG" type="Sprite2D" parent="." unique_id=532993527]
scale = Vector2(2, 2)
texture = ExtResource("2_aj7ud")

[node name="Camera2D" type="Camera2D" parent="." unique_id=472805153]
script = ExtResource("4_aj7ud")

[node name="Spawner" type="Node2D" parent="." unique_id=318358069]
script = ExtResource("8_ii07k")
waves_data = Array[ExtResource("9_2ml6w")]([ExtResource("10_xgbxb")])
enemy_collection = Array[ExtResource("12_tp84n")]([ExtResource("13_8kk48"), ExtResource("14_wqbss"), ExtResource("15_fir7s"), ExtResource("16_gy0qm"), ExtResource("17_dh340")])

[node name="WaveTimer" type="Timer" parent="Spawner" unique_id=543590225]
one_shot = true

[node name="SpawnTimer" type="Timer" parent="Spawner" unique_id=823280823]
one_shot = true

[node name="GameUI" type="CanvasLayer" parent="." unique_id=907525135]

[node name="CoinsBag" parent="GameUI" unique_id=479172471 instance=ExtResource("15_h4q77")]
unique_name_in_owner = true

[node name="WaveIndexLabel" type="Label" parent="GameUI" unique_id=1607876241]
unique_name_in_owner = true
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -78.0
offset_top = 20.0
offset_right = 78.0
offset_bottom = 97.3333
grow_horizontal = 2
text = "TEXT"
label_settings = SubResource("LabelSettings_fv88w")
horizontal_alignment = 1

[node name="WaveTimerLabel" type="Label" parent="GameUI" unique_id=976541426]
unique_name_in_owner = true
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -78.0
offset_top = 90.0
offset_right = 78.0
offset_bottom = 167.333
grow_horizontal = 2
text = "10"
label_settings = SubResource("LabelSettings_fv88w")
horizontal_alignment = 1

[node name="UpgradePanel" parent="GameUI" unique_id=1425783268 instance=ExtResource("15_w4nra")]
unique_name_in_owner = true
visible = false
upgrades = Array[ExtResource("16_v2rwt")]([ExtResource("17_8rss1"), ExtResource("18_h4q77"), ExtResource("19_0b3j3"), ExtResource("20_ari34"), ExtResource("21_rvsgk"), ExtResource("22_dlje5"), ExtResource("23_rdx1w"), ExtResource("24_rlwkl"), ExtResource("25_c233o"), ExtResource("26_8m5b6"), ExtResource("27_uh2xj"), ExtResource("28_a6q8v"), ExtResource("29_3erww"), ExtResource("30_raiaf"), ExtResource("31_i5wjf"), ExtResource("32_suft4"), ExtResource("33_ypop5"), ExtResource("34_bt16s"), ExtResource("35_qdbrs"), ExtResource("36_uwy3e"), ExtResource("37_n2cp3"), ExtResource("38_6tjis"), ExtResource("39_2v46x"), ExtResource("40_4r0i2"), ExtResource("41_6kcra"), ExtResource("42_sr54x"), ExtResource("43_7mqte"), ExtResource("44_qn0w1"), ExtResource("45_3s26p"), ExtResource("46_hxwo4"), ExtResource("47_doi8w"), ExtResource("48_r2piv"), ExtResource("49_cpv0d"), ExtResource("50_q8pmp"), ExtResource("51_vt5tt"), ExtResource("52_nmd8y"), ExtResource("53_7r13w"), ExtResource("54_n43t1"), ExtResource("55_kos1b"), ExtResource("56_0537p"), ExtResource("57_nw05c"), ExtResource("58_c61ch"), ExtResource("59_ru1bd"), ExtResource("60_5bpgu"), ExtResource("61_mc4vh"), ExtResource("62_enf7e")])

[node name="ShopPanel" parent="GameUI" unique_id=913213429 instance=ExtResource("63_8rss1")]
unique_name_in_owner = true
visible = false

[node name="SelectionPanel" parent="GameUI" unique_id=966032324 instance=ExtResource("64_h4q77")]
unique_name_in_owner = true

[node name="MusicPlayer" type="AudioStreamPlayer" parent="." unique_id=949008649]
stream = ExtResource("65_0b3j3")
volume_db = -10.0
autoplay = true
bus = &"Music"

[connection signal="on_wave_completed" from="Spawner" to="." method="_on_spawner_on_wave_completed"]
[connection signal="timeout" from="Spawner/WaveTimer" to="Spawner" method="_on_wave_timer_timeout"]
[connection signal="timeout" from="Spawner/SpawnTimer" to="Spawner" method="_on_spawn_timer_timeout"]
[connection signal="on_shop_next_wave" from="GameUI/ShopPanel" to="." method="_on_shop_panel_on_shop_next_wave"]
[connection signal="on_selection_completed" from="GameUI/SelectionPanel" to="." method="_on_selection_panel_on_selection_completed"]
